# HieraFlex

./: README.md
hieraflex/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-lock-optional.txt  requirements-lock.txt
hieraflex/backend/app/: main.py  worker_daemon.py
hieraflex/core/agents/: agent_explainer.py  agent_memory.py  agent_planner.py  appliance_agent.py  community_agent.py  house_agent.py
hieraflex/core/constraints/: appliance_constraints.py  battery_constraints.py  comfort_constraints.py  ev_constraints.py  power_constraints.py
hieraflex/core/control/: appliance_controller.py  community_coordinator.py  house_controller.py
hieraflex/core/market/: bid_offer_engine.py  clearing_engine.py  peer_matching.py  tariff_engine.py
hieraflex/core/replay/: event_bus.py  event_clock.py  replay_engine.py
hieraflex/data/loaders/: deddiag_adapter.py  hf_stream_adapter.py  local_adapter.py
hieraflex/docs/: agentic_design.md  architecture.md  deployment.md  experiment_tracking.md  github_repo_workflow.md  huggingface_integration.md  live_website_mode.md  market_design.md  mathematical_model.md  notation.md  problem_formulation.md  reproducibility.md  resource_visualization.md  rl_formulation.md  training_lifecycle.md
hieraflex/frontend/: index.html  package-lock.json  package.json  tsconfig.json
hieraflex/scripts/: bootstrap.py
hieraflex/tests/: test_api.py  test_data_loading.py  test_deployment.py  test_house_agent.py  test_market_engine.py  test_replay_engine.py  test_rl_env.py  test_training_manager.py
(+108 files in other folders)
