[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hieraflex"
version = "0.1.0"
description = "Hierarchical Flexibility Intelligence for Community Energy Trading"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "HieraFlex Contributors" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=17.0.0",
  "python-dateutil>=2.9.0",
  "pyyaml>=6.0.2",
  "orjson>=3.10.0",
  "httpx>=0.27.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.2"
]

[project.optional-dependencies]
rl = ["torch>=2.4.0"]
test = ["pytest>=8.3.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "core*", "data*", "rl*"]
